# MultiAgent_Monorepo

./: .gitignore  CHANGELOG.md  README.md
methodology/: DOC_TAXONOMY.md  METHODOLOGY.md  MULTI_AGENT.md  install.sh  package.sh
methodology/.claude-plugin/: marketplace.json
methodology/adapters/: README.md
methodology/artifacts/: README.md
methodology/config/: CLAUDE.boot.template.md  execution-preflight.example.json  project.config.example.md  remediation-disposition.example.json
methodology/lint/: cross_runtime_lint.py  test_cross_runtime_lint.py
methodology/nitpicker/: README.md  nit_envelope.py  nitpicker.config.example.json  (+3 more)
runtimes/acp/: .gitignore  PHASE.md  pyproject.toml  run.bat
runtimes/acp/acp/: __init__.py  __main__.py  config.py  dedupe.py  join.py  liveness.py  models.py  notify.py  orch_drivers.py  orch_events.py  orch_relay_driver.py  orch_runs.py  phase.py  poller.py  proc.py  store.py  timeutil.py
runtimes/acp/acp/collectors/: __init__.py  base.py  claude.py  codex.py  cursor.py  fake.py  orch_collector.py
runtimes/acp/acp/web/: __init__.py  app.py
runtimes/acp/acp/web/static/: dashboard.js  style.css
runtimes/acp/acp/web/templates/: dashboard.html
runtimes/acp/config/: paths.yaml
runtimes/acp/discovery/: design.md  handoff.md  open_items.md  phase_md_format.md  requirements.md  risk_register.md  role_assignment.md  validation_plan.md
runtimes/acp/prompts/: phase-P0.md  phase-P1.5.md  phase-P1.md  phase-P2-finish.md  phase-P2.md  phase-P3.md  phase-U1.md  phase-U2.md  phase-U3.md  phase-V1.md
runtimes/ztr/: .gitignore  AGENTS.md  pyproject.toml  ztr.bat
runtimes/ztr/src/: __init__.py  __main__.py  envelope.py  runner.py
runtimes/ztr/src/agents/: __init__.py  base.py  discovery.py  nitpicker.py  ollama.py  registry.py
runtimes/ztr/src/config/: agents.config.yaml  loader.py  schema.py
runtimes/ztr/src/engine/: __init__.py  circuit_breaker.py  event_emit.py  exec_adapter.py  fix_feedback.py  hooks.py  invariants.py  phase_relay.py  post_merge_verifier.py  quality_gate.py  reapply_ledger.py  resume_chain.py  session_store.py  static_review.py
runtimes/ztr/src/web/: app.py
runtimes/ztr/src/web/templates/: agent_stats.html  base.html  live_monitor.html  session_detail.html  sessions.html
runtimes/ztr/src/web/templates/partials/: sessions_table.html
(+52 files in other folders)
